HtmlUi: Fix padding on right-aligned columns when displaying state icons

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/TableHeader.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/TableHeader.css
@@ -75,6 +75,7 @@
   }
 
   &.sorted,
+  &.grouped,
   &.filtered {
     /* make room for icon */
     padding-right: @table-header-padding-right + @table-header-sort-icon-size-1;
